--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
 }
+
 .inner-container{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 70vh;
+    height: 80vh;
     overflow: hidden;
 }
 
@@ -54,13 +55,22 @@
     position: absolute;
     top: 0;
     left: 50%; /* 처음엔 슬라이더가 중앙에 위치 */
-    width: 5px; /* 슬라이더 너비 */
+    width: 3px; /* 슬라이더 너비 */
     height: 100%;
     background: #fff;
     cursor: ew-resize;
     z-index: 10;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     transform: translateX(-50%);
+}
+
+.circle_slider{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
 }
 
 button {
